--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(126, 100, 188);"></a>
+                        <a href="https://mobirise.com" class="mbri-home mbr-iconfont mbr-iconfont-menu navbar-logo" style="color: rgb(250, 197, 28);"></a>
                         <a class="navbar-caption text-white" href="https://mobirise.com">JEXTOBAN SECONDARY SCHOOL</a>
                     </div>
 
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/o">free one page web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -107,7 +107,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="You are welcome to contact us">
-                                    <input type="hidden" value="OpQ3sShyP4QTAHUDdwS+Mte1CSBX8igjn2ihrNSRo0hIaoPAlsyMa+Apxg/kzJ660LsV2U93oKcPgqWuNvt0O4qQxnt8gUk/RtjPWwua09wbdO3nAK2wpbu0eVEuYEvI" data-form-email="true">
+                                    <input type="hidden" value="FL7JIBaFH88FVQUaNH9OJ/9U95otSUjYBy7+tSM/x1TLaG0bU0eA2Nu0l1DSZ+Y0Ow3CCdr7xkB7cbgErKqVMKk2hFzXc018UuMC1+/dYWr/edbcOObGlFqzR9VfnI0m" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="name" class="form-control" name="name" required="" data-form-field="Name" placeholder="Your Full Name">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
@@ -134,7 +134,7 @@
                     <div id="title">
                         <div class="span-title">
                             <span class="mbr-section-title display-2 text-center pad-r">ADMISSIONS&nbsp;<br> FOR</span>
-                            <span class="mbr-section-title display-2 element typedextHeader11-e" adress="typedextHeader11-e" firstel="NEXT TERM" secondel="FOR" thirdel="NEXT TERM" typespeed="20">
+                            <span class="mbr-section-title display-2 element typedextHeader11-e" adress="typedextHeader11-e" firstel="NEXT TERM" secondel="" thirdel="NEXT TERM" typespeed="20">
                             </span>
                         </div>
                         <div class="mbr-section-text lead text-center">
