--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="rtl">
   <section id="menu-c" data-rv-view="0">
 
-    <nav class="navbar navbar-dropdown">
+    <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Vision &amp; Mission Statement</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Founder's Message</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">&nbsp;Principal's Message/Lagos</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false"> Principal's Message/Ogun</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">School Song</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Guvernance/Quality Assurance</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Staff/Team</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">SCHOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Facilities</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Curriculum</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ALUMNI</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">CAREERS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">New Item</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">ABOUT US</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Vision &amp; Mission Statement</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Founder's Message</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">&nbsp;Principal's Message/Lagos</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false"> Principal's Message/Ogun</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">School Song</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Guvernance/Quality Assurance</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Staff/Team</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">SCHOOLS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">Facilities</a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Curriculum</a></div></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ADMISSIONS</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">ALUMNI</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CAREERS</a><div class="dropdown-menu"><a class="dropdown-item" href="https://mobirise.com/">New Item</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/c">website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
+<section class="engine"><a href="https://mobirise.me/k">develop free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-b" data-rv-view="2" style="background-image: url(assets/images/visit01-1069x480.png);">
 
     
 
@@ -107,7 +107,7 @@
                                     <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                                 </div>
                                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="You are welcome to contact us">
-                                    <input type="hidden" value="LHGXbhMfMZ/0pToGcItGQ/YGL0BPIMhJdXlYxqLJporX1vkH0l4Rsr5X8GWCb1WmIWpUequFl2oFz4bDpswhzqcvgWV52x8ZbtJyfJV1ph+fDO3dwAbUbcNPphOL9WZo" data-form-email="true">
+                                    <input type="hidden" value="v7sKaq0bOGTbW/fyxzUsq9YFQsjrLrrd4U0T0UitizkcT5kPjrr43ludQOZ/rDyd5q/Gwui7d4gAThJ0ljawU3ArjVJ+PcAL8/q16dFCOtoAJjBlDqi8B2p08ks/LEz8" data-form-email="true">
                                     <div class="mbr-subscribe mbr-subscribe-dark input-group">
                                         <input type="name" class="form-control" name="name" required="" data-form-field="Name" placeholder="Your Full Name">
                                         <input type="email" class="form-control" name="email" required="" data-form-field="Email" placeholder="Enter Your Email">
