create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">free bootstrap template</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j" data-rv-view="23" style="background-color: rgb(250, 197, 28); padding-top: 160px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.me">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j" data-rv-view="23" style="background-color: rgb(250, 197, 28); padding-top: 160px; padding-bottom: 0px;">
 
     
     <div class="container">
