--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/s">bootstrap themes</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-o" data-rv-view="23" style="background-image: url(assets/images/student01-3-606x303.png); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/u">bootstrap website templates</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-o" data-rv-view="23" style="background-image: url(assets/images/student01-3-606x303.png); padding-top: 120px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -227,7 +227,7 @@
 
                   </div>
 
-                  <div><a class="btn btn-primary" href="https://mobirise.com">Back to Home</a></div>
+                  <div><a class="btn btn-primary" href="index.html">Back to Home</a></div>
               </div>
 
 
