create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/n">landing page html templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-4" data-rv-view="2" style="background-image: url(assets/images/star01-1231x551.jpg);">
+<section class="engine"><a href="https://mobirise.me/x">free css templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-4" data-rv-view="2" style="background-image: url(assets/images/star01-1231x551.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);"></div>
 
@@ -87,7 +87,7 @@
 
     <div class="mbr-cards-row row striped">
 
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-desktop mbr-iconfont mbr-iconfont-features2"></a></div>
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-mobile mbr-iconfont mbr-iconfont-features2"></a></div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-pencil mbr-iconfont mbr-iconfont-features2"></a></div>
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 0px; padding-bottom: 0px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img"><a href="https://mobirise.com" class="etl-icon icon-global mbr-iconfont mbr-iconfont-features2"></a></div>
@@ -144,7 +144,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-d" data-rv-view="8" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-d" data-rv-view="8" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
