--- a/page2.html
+++ b/page2.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/l">free website templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1j" data-rv-view="28" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/d">site maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1j" data-rv-view="28" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -239,7 +239,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-p" data-rv-view="45" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-p" data-rv-view="45" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
