--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/v">html templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" data-rv-view="14" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/v">free html templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1o" data-rv-view="14" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -116,7 +116,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-j" data-rv-view="22" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-j" data-rv-view="22" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
