--- a/page3.html
+++ b/page3.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/r">free bootstrap template</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="65" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.me/c">website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1z" data-rv-view="65" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -173,7 +173,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="2AnFRYCr8Cf6/FZvKS9GcYWDUlFuW3G3erWoIoZbKV51X5Nt22cCH09lEHq1Lr6LXgXwPZ7JnjsBArDZLtUb474d3kJ8bWnN+JFvs4Vq5+Cl+/tFFYE7Bnz8WN7xhger" data-form-email="true">
+                        <input type="hidden" value="Usr+bcJCoFJgFqNfxg8Tu4OEA4QnZ8e04pQGTKkkF8W5NA9z7Tu0HWfXLAMtDcn/MGnZQiNmkZ4P0kbsxk+KFxIvplYg4q481f33zF3n6TqK9OUCFsIi84G+xjR2s2sE" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -214,7 +214,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-v" data-rv-view="82" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-v" data-rv-view="82" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
