--- a/page6.html
+++ b/page6.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/b">how to create a site</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2i" data-rv-view="100" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/r">free bootstrap templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2i" data-rv-view="100" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -75,7 +75,7 @@
     
 
     <div class="mbr-cards-row row">
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-phone mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></a></div>
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-edit mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></a></div>
@@ -101,7 +101,7 @@
                 </div>
           </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-briefcase mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></a></div>
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
+        <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 40px; padding-bottom: 40px;">
             <div class="container">
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="etl-icon icon-linegraph mbr-iconfont mbr-iconfont-features7" style="color: rgb(255, 255, 255);"></a></div>
@@ -148,7 +148,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-1d" data-rv-view="108" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-1d" data-rv-view="108" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
