--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.me/h">create a web page for free</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-27" data-rv-view="51" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.me/s">bootstrap theme</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-27" data-rv-view="51" style="background-color: rgb(228, 170, 97); padding-top: 120px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-md-padding" id="social-buttons4-2d" data-rv-view="59" style="background-color: rgb(46, 46, 46); padding-top: 60px; padding-bottom: 60px;">
+<section class="mbr-section mbr-section-md-padding" id="social-buttons4-2d" data-rv-view="59" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
